--- a/_includes/features_block.html
+++ b/_includes/features_block.html
@@ -21,7 +21,7 @@
         </div><!-- .block-preview -->
         {% endif %}
         <div class="cell block-content">
-          <h3 class="block-title underline">{{ feature.title }}</h3>
+          <h3 class="block-title">{{ feature.title }}</h3>
           <div class="block-copy">
             {{ feature.content | markdownify }}
           </div>
