--- a/_includes/video_block.html
+++ b/_includes/video_block.html
@@ -9,9 +9,11 @@
       />
     </video>
 
-    <div class="cell block-content">
-      <h2 class="block-title underline">{{ include.section.title }}</h2>
-      <div class="block-copy">{{ include.section.content | markdownify }}</div>
+    <div class="cell block-content videotitle">
+      <h1 class="block-title underline">{{ include.section.title }}</h1>
+      <div class="block-copy">
+        <h2>{{ include.section.content | markdownify }}</h2>
+      </div>
       {% assign actions_is_not_empty = include.section.actions | is_not_empty %}
       {% if actions_is_not_empty %}
       <p class="block-buttons">
