--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -188,9 +188,17 @@ $palette: (
 
 // Custom Styling
 
+.video-container {
+  background-color: black;
+}
+
 .video-block {
-  max-height: 1000px;
+  max-height: 800px;
   overflow: hidden;
+}
+
+video {
+  opacity: 0.65;
 }
 
 .videotitle {
@@ -199,8 +207,8 @@ $palette: (
   left: 15%;
 
   h1 {
-	color: white;
-	font-size: 3.44444rem;
+    color: white;
+    font-size: 3.44444rem;
   }
 
   h2 {
