--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -216,38 +216,21 @@ video {
   }
 }
 
-.social-block {
-  margin-top: 3em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-bottom: 3em;
-
-  .header {
-    margin-bottom: 2em;
+@media only screen and (max-width: 800px) {
+	.videotitle {
+	  position: absolute;
+	  top: 120px;
+	  left: 10%;
+	  right: 10%;
+  
+	  h1 {
+		color: white;
+		font-size: 1.5rem;
+	  }
+  
+	  h2 {
+		font-size: 1rem;
+		color: white;
+	  }
+	}
   }
-
-  .icon-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-  }
-
-  a {
-    border-bottom: none;
-
-    img {
-      width: 60px;
-      height: 60px;
-    }
-
-    @media only screen and (max-width: 600px) {
-      img {
-        width: 35px;
-        height: 35px;
-      }
-    }
-  }
-}
